--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="icons/favicon.ico" />
+    <link rel="icon" href="icons/mylog.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Safaeat Molla's Portfolio" content="Portfolio content" />
     <meta property="og:title" content="Safaeat Molla Portfolio ⚡" />
